--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
     "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
     "@types/react": "^17.0.3",
+    "@vanilla-extract/css": "^1.1.0",
+    "@vanilla-extract/esbuild-plugin": "^1.1.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.1",
     "esbuild": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4",
-    "@vanilla-extract/css": "^1.1.0",
-    "@vanilla-extract/esbuild-plugin": "^1.1.0"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "react": "^17.0.2",
