--- a/package.json
+++ b/package.json
@@ -54,5 +54,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@vanilla-extract/dynamic": "^1.0.0"
+  }
 }
