--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
+    "@types/color": "^3.0.2",
     "@types/react": "^17.0.3",
     "@vanilla-extract/css": "^1.1.0",
     "@vanilla-extract/esbuild-plugin": "^1.1.0",
@@ -55,6 +56,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@vanilla-extract/dynamic": "^1.0.0"
+    "@vanilla-extract/dynamic": "^1.0.0",
+    "color": "^3.1.3"
   }
 }
