--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "tsc --noEmit",
-    "typescript-watch": "tsc --noEmit --watch",
+    "typescript": "tsc --emitDeclarationOnly",
+    "typescript-watch": "tsc --emitDeclarationOnly --watch",
     "esbuild": "node build.js",
     "esbuild-watch": "node build.js watch",
     "build": "yarn run typescript && yarn run esbuild",
@@ -49,14 +49,12 @@
     "esbuild": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@vanilla-extract/dynamic": "^1.0.0",
+    "color": "^3.1.3"
   },
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  },
-  "dependencies": {
-    "@vanilla-extract/dynamic": "^1.0.0",
-    "color": "^3.1.3"
   }
 }
