--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true,
+    "outDir": "dist/"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist", "src/stories"]
