--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-haze",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Easily show a fade at edges of lists to indicate scrollability",
   "repository": {
     "type": "git",
@@ -43,15 +43,15 @@
     "@types/color": "^3.0.2",
     "@types/react": "^17.0.3",
     "@vanilla-extract/css": "^1.1.0",
+    "@vanilla-extract/dynamic": "^1.0.0",
     "@vanilla-extract/esbuild-plugin": "^1.1.0",
     "babel-loader": "^8.2.2",
+    "color": "^3.1.3",
     "concurrently": "^6.0.1",
     "esbuild": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4",
-    "@vanilla-extract/dynamic": "^1.0.0",
-    "color": "^3.1.3"
+    "typescript": "^4.2.4"
   },
   "peerDependencies": {
     "react": "^17.0.2",
