--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-haze",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Easily show a fade at edges of lists to indicate scrollability",
   "repository": {
     "type": "git",
@@ -14,8 +14,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "tsc --emitDeclarationOnly",
-    "typescript-watch": "tsc --emitDeclarationOnly --watch",
+    "typescript": "tsc --noEmit",
+    "typescript-watch": "tsc --noEmit --watch",
+    "typescriptOLD": "tsc --emitDeclarationOnly",
+    "typescript-watchOLD": "tsc --emitDeclarationOnly --watch",
     "esbuild": "node build.js",
     "esbuild-watch": "node build.js watch",
     "build": "yarn run typescript && yarn run esbuild",
@@ -43,12 +45,12 @@
     "@types/color": "^3.0.2",
     "@types/react": "^17.0.3",
     "@vanilla-extract/css": "^1.1.0",
-    "@vanilla-extract/dynamic": "^1.0.0",
     "@vanilla-extract/esbuild-plugin": "^1.1.0",
     "babel-loader": "^8.2.2",
     "color": "^3.1.3",
     "concurrently": "^6.0.1",
     "esbuild": "^0.11.7",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.2.4"
@@ -56,5 +58,8 @@
   "peerDependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "dependencies": {
+    "@vanilla-extract/dynamic": "^1.0.0"
   }
 }
