--- a/package.json
+++ b/package.json
@@ -1,27 +1,47 @@
 {
-  "name": "react-haze",
   "version": "0.0.4",
   "description": "Easily show a fade at edges of lists to indicate scrollability",
   "repository": {
     "type": "git",
     "url": "https://github.com/alvarlagerlof/react-haze"
   },
-  "files": [
-    "dist"
-  ],
+  "license": "MIT",
   "main": "dist/index.js",
-  "type": "module",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript": "tsc --noEmit",
-    "typescript-watch": "tsc --noEmit --watch",
-    "esbuild": "node build.js",
-    "esbuild-watch": "node build.js watch",
-    "build": "yarn run typescript && yarn run esbuild",
-    "build-watch": "concurrently \"yarn run typescript-watch\" \"yarn run esbuild-watch\"",
-    "storybook": "start-storybook -p 6006 ",
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
+  "prettier": {
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "name": "react-haze",
+  "author": "Alvar Lagerlöf",
   "keywords": [
     "react",
     "list",
@@ -31,32 +51,40 @@
     "fog",
     "mist"
   ],
-  "author": "Alvar Lagerlöf <hello@alvar.dev> (https://alvar.dev)",
-  "license": "MIT",
+  "module": "dist/react-haze.esm.js",
+  "size-limit": [
+    {
+      "path": "dist/react-haze.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/react-haze.esm.js",
+      "limit": "10 KB"
+    }
+  ],
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.3.4",
+    "@size-limit/preset-small-lib": "^5.0.1",
     "@storybook/addon-essentials": "^6.3.4",
+    "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.3.4",
+    "@storybook/addons": "^6.3.4",
     "@storybook/react": "^6.3.4",
     "@types/color": "^3.0.2",
-    "@types/react": "^17.0.3",
-    "@vanilla-extract/css": "^1.1.0",
-    "@vanilla-extract/esbuild-plugin": "^1.1.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@vanilla-extract/babel-plugin": "^1.0.0",
+    "@vanilla-extract/css": "^1.1.1",
+    "@vanilla-extract/dynamic": "^1.0.0",
     "babel-loader": "^8.2.2",
     "color": "^3.1.3",
-    "concurrently": "^6.0.1",
-    "esbuild": "^0.11.7",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4"
-  },
-  "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "dependencies": {
-    "@vanilla-extract/dynamic": "^1.0.0"
+    "react-is": "^17.0.2",
+    "size-limit": "^5.0.1",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   }
 }
