--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,34 @@
 name: CI
-on: [push]
+on:
+  push:
+    braches:
+      - main
+      - beta
+      - next
 jobs:
   test:
     name: Build, lint, and test on Node ${{ matrix.node }}
+    runs-on: ubuntu-latest
 
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node: [10, 12, 14, 16]
+        node: [12, 14, 16]
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
       - name: Use Node ${{ matrix.node }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install deps
+      - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
-      - name: Lint
-        run: yarn lint
+      # - name: Lint
+      #   run: yarn lint
+      # Removed until https://github.com/formium/tsdx/issues/1056 is fixed
 
       - name: Test
         run: yarn test --ci --coverage --maxWorkers=2
@@ -30,22 +36,20 @@ jobs:
   publish:
     name: "Publish Module to NPM"
     needs: test
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
-
-      - name: Build
-        run: yarn build
 
       - name: Release
         run: npx semantic-release@17
