--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0-development",
+  "version": "1.0.0-semantic-release",
   "name": "react-haze",
   "author": "Alvar Lagerlöf",
   "description": "Easily show a fade at edges of lists to indicate scrollability",
@@ -36,7 +36,8 @@
     "analyze": "size-limit --why",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "commit": "cz"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -73,14 +74,18 @@
     "@vanilla-extract/dynamic": "^1.0.0",
     "babel-loader": "^8.2.2",
     "color": "^3.1.3",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.1",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "semantic-release": "^17.4.4",
     "size-limit": "^5.0.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.5",
-    "semantic-release": "^17.4.4"
+    "typescript": "^4.3.5"
   }
 }
