--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^1.0.0"
+    "react-app-polyfill": "^1.0.0",
+    "react-haze": "^1.1.0"
   },
   "alias": {
     "react": "../node_modules/react",
@@ -20,7 +21,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.8.4",
     "parcel": "^1.12.3",
-    "typescript": "^3.4.5",
-    "parcel-bundler": "1.12.5"
+    "parcel-bundler": "1.12.5",
+    "typescript": "^3.4.5"
   }
 }
