--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
       "limit": "10 KB"
     }
   ],
+  "dependencies": {
+    "@vanilla-extract/dynamic": "^1.0.0",
+    "@vanilla-extract/css": "^1.1.1",
+    "color": "^3.1.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@size-limit/preset-small-lib": "^5.0.1",
@@ -70,10 +75,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@vanilla-extract/babel-plugin": "^1.0.0",
-    "@vanilla-extract/css": "^1.1.1",
-    "@vanilla-extract/dynamic": "^1.0.0",
     "babel-loader": "^8.2.2",
-    "color": "^3.1.3",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "eslint-config-prettier": "^8.3.0",
