--- a/package.json
+++ b/package.json
@@ -59,22 +59,23 @@
     }
   ],
   "dependencies": {
-    "@vanilla-extract/css": "^1.7.0",
+    "@vanilla-extract/css": "^1.7.1",
     "@vanilla-extract/dynamic": "^2.0.2",
     "color": "^4.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.18.2",
     "@size-limit/preset-small-lib": "^7.0.8",
-    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-essentials": "^6.5.6",
     "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/addons": "^6.4.22",
-    "@storybook/react": "^6.4.22",
+    "@storybook/addon-links": "^6.5.6",
+    "@storybook/addons": "^6.5.6",
+    "@storybook/react": "^6.5.6",
     "@types/color": "^3.0.3",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
     "@vanilla-extract/babel-plugin": "^1.1.6",
+    "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
@@ -88,6 +89,6 @@
     "size-limit": "^7.0.8",
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
